[gd_scene load_steps=7 format=2]

[ext_resource path="res://Gameplay/assets/art/MageRight.png" type="Texture" id=1]
[ext_resource path="res://Gameplay/assets/art/playerGrey_walk1.png" type="Texture" id=3]
[ext_resource path="res://Gameplay/assets/art/playerGrey_walk2.png" type="Texture" id=4]
[ext_resource path="res://Gameplay/scripts/Player.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "attack_mage",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "mage",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 26.9307
height = 12.7712

[node name="Player" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "attack_mage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="UltiTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]

[node name="Label" type="Label" parent="."]
margin_left = -49.0
margin_top = -56.0
margin_right = 15.0
margin_bottom = -42.0
rect_scale = Vector2( 1.5, 1.5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="UltiTimer" to="." method="_on_UltiTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
